--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "react-scripts": "5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+     "start": "react-scripts --max_old_space_size=4096 start",
+     "build": "react-scripts --max_old_space_size=4096 build",
+     "test": "react-scripts test",
+     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
