--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
+    "@material-ui/core": "^4.12.3",
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
