feat ; made ui fi

--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@mui/material": "^5.10.5",
     "@mui/x-data-grid": "^5.17.2",
     "@nivo/bar": "^0.80.0",
-    "@nivo/core": "^0.79.0",
+    "@nivo/core": "^0.80.0",
     "@nivo/geo": "^0.80.0",
-    "@nivo/line": "^0.79.1",
+    "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "chart.js": "^3.7.1",
-    "next": "latest",
+    "next": "^13.0.0",
     "next-themes": "^0.1.1",
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-chartjs-2": "^4.0.1",
-    "react-dom": "17.0.2",
+    "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
