--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "chart.js": "^3.7.1",
     "next": "latest",
     "next-themes": "^0.1.1",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^4.0.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
