--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "build": "next build"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^5.11.3",
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.2",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
@@ -26,6 +26,7 @@
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "chart.js": "^3.7.1",
+    "material-react-table": "^1.3.7",
     "next": "^13.0.0",
     "next-themes": "^0.1.1",
     "react": "18.2.0",
@@ -34,7 +35,9 @@
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@mui/x-date-pickers": "^5.0.2",
+    "dayjs": "^1.11.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
